--- a/assets/style/css/index.css
+++ b/assets/style/css/index.css
@@ -169,6 +169,9 @@ body {
   height: 25px;
   padding: 4px;
 }
+.header__container .header__container--menu {
+  display: none;
+}
 
 @media screen and (min-width: 744px) {
   body {
@@ -179,6 +182,8 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
   }
   .header__container .header__container--top .header__container--burger {
     display: none;
@@ -195,8 +200,12 @@ body {
     margin-top: auto;
     margin-bottom: auto;
   }
-  .header__container .header__container--searchfield .field-search {
-    width: auto;
+  .header__container .header__container--searchfield .field-search:focus-visible {
+    height: 35px;
+    font-size: 1rem;
+    -webkit-transition: 300ms ease-in-out;
+    transition: 300ms ease-in-out;
+    border-color: #FBF4A1;
   }
   .header__container .header__container--zoom {
     margin-top: auto;
@@ -229,5 +238,11 @@ body {
   .header__container .header__container--menu .menu__ul .menu__icon img {
     width: 30px;
     height: 30px;
+    margin: 10px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  body {
+    background-color: rgb(43, 204, 25);
   }
 }/*# sourceMappingURL=index.css.map */
