--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -7,6 +7,7 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
+        align-items: center;
 
         .header__container--brandname {
             display: flex;
@@ -41,6 +42,7 @@
 
     .header__container--searchfield {
         width: 300px;
+        transition: 50ms ease-in-out;
 
         .field-search {
             width: -webkit-fill-available;
@@ -109,16 +111,14 @@
         }
 
         .header__container--searchfield {
-            width: 200px;
+            width: 270px;
             margin-top: auto;
             margin-bottom: auto;
+            transition: 50ms ease-in-out;
 
 
             .field-search:focus-visible {
-                height: 35px;
                 font-size: 1rem;
-                transition: 300ms ease-in-out;
-                border-color: $cream;
             }
 
         }
@@ -167,7 +167,10 @@
     }
 
 
+    .header__container--searchfield {
+        width: 670px !important;
+        transition: 50ms ease-in-out;
+    }
 
-
-    
+     
 }
