--- a/assets/style/css/variables.css
+++ b/assets/style/css/variables.css
@@ -1,1 +1,4 @@
-/*# sourceMappingURL=variables.css.map */
+@font-face {
+  font-family: "Inter";
+  src: url(../../fonts/Inter/Inter-VariableFont_slnt\,wght.ttf);
+}/*# sourceMappingURL=variables.css.map */
