--- a/assets/style/scss/index.scss
+++ b/assets/style/scss/index.scss
@@ -5,5 +5,6 @@
 
 // import des styles d'éléments principaux
 @import '../../../components/header/header.scss';
+@import '../../../components/header/nagivation/navigation.scss';
 
  
