--- a/assets/style/scss/variables.scss
+++ b/assets/style/scss/variables.scss
@@ -1,5 +1,8 @@
+@font-face {
+    font-family: 'Inter';
+    src: url(../../fonts/Inter/Inter-VariableFont_slnt\,wght.ttf);
+}
 
     $black: #222222 ;
     $white: #EEEEEE ;
     $cream: #FBF4A1 ;
-
