--- a/components/header/nagivation/navigation.scss
+++ b/components/header/nagivation/navigation.scss
@@ -8,6 +8,10 @@
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
+
+        &.active {
+            top: 0px;
+        }
     }
 
     .menu__ul--profil {
