--- a/components/header/nagivation/navigation.scss
+++ b/components/header/nagivation/navigation.scss
@@ -19,6 +19,10 @@
         z-index: -2;
         top: -200px;
 
+        &.active {
+            top: 0px;
+        }
+
         .menu__icon p {
             padding: 10px;
             text-align: center;
