--- a/components/header/nagivation/navigation.scss
+++ b/components/header/nagivation/navigation.scss
@@ -1,4 +1,12 @@
-.navigation__container {
+.profilarrow {
+
+    .down {
+        transition: 100ms ease-in-out;
+        rotate: 180deg;
+    }
+}
+
+.submenu__container {
     height: 0px;
 
     .menu__ul {
@@ -13,13 +21,6 @@
             top: 0px;
         }
 
-        .profilarrow {
-                       
-            .down {
-            transition: 100ms ease-in-out;
-            rotate: 180deg;
-            }
-        }
     }
 
 }
@@ -38,5 +39,32 @@
         text-align: center;
         border-bottom: 1px solid $cream;
     }
+
+}
+
+
+@media screen and (min-width:744px) {
+    
+.menu__ul--profil {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+    .menu__icon p {
+        border-bottom: 0;
+    }
+
+}
+
+
+
+
+
+
+
+
+
+
+
 
 }
