--- a/assets/style/scss/index.scss
+++ b/assets/style/scss/index.scss
@@ -6,5 +6,6 @@
 // import des styles d'éléments principaux
 @import '../../../components/header/header.scss';
 @import '../../../components/header/nagivation/navigation.scss';
+@import '../../../components/footer/about/about.scss';
 
  
