--- a/assets/style/scss/index.scss
+++ b/assets/style/scss/index.scss
@@ -6,6 +6,7 @@
 // import des styles d'éléments principaux
 @import '../../../components/header/header.scss';
 @import '../../../components/header/nagivation/navigation.scss';
+@import '../../../components/footer/footer.scss';
 @import '../../../components/footer/about/about.scss';
-
+@import '../../../components/footer/social-networks/social-networks.scss';
  
