--- a/components/footer/about/about.scss
+++ b/components/footer/about/about.scss
@@ -3,20 +3,25 @@
     flex-direction: column;
     align-items: center;
 
+    .gamegogs__block {
+        display: flex;
+        flex-direction: column;
+    }
+
+
     .gamegogsmenu__about,
     .gamegogsmenu__help,
     .gamegogsmenu__join {
         display: none;
+        flex-direction: column;
         margin-bottom: 40px;
-        width: 310px;
+        width: 100%;
 
         &.active {
-            display: block;
+            display: flex;
         }
     }
 
-
-  
 
     .gamegogs__title {
         display: flex;
@@ -34,20 +39,47 @@
             rotate: 180deg;
             transition: 100ms ease-in-out;
         }
-
     }
 
     .gamegogsmenu__li {
 
         text-align: center;
-        margin: 5px;
+        margin-bottom: 15px;
         border-bottom: 1px solid $cream-alpha;
 
         &>p {
             font-size: 14px;
         }
     }
+}
+
+@media screen and (min-width:744px) {
 
 
+    .footer__container--gamegogsmenu {
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-around;
 
+        .gamegogsmenu__about,
+        .gamegogsmenu__help,
+        .gamegogsmenu__join {
+            display: flex;
+            align-items: flex-start;
+            margin-left: 15px;
+
+        }
+
+        .gamegogsmenu__li {
+            border-bottom: 0px;
+        }
+
+        .gamegogs__title {
+            justify-content: flex-start;
+
+            img {
+                display: none;
+            }
+        }
+    }
 }
