--- a/assets/style/css/social-networks.css
+++ b/assets/style/css/social-networks.css
@@ -23,6 +23,16 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin: 10px;
+}
+.socialnetworks__container .socialnetwork__block .socialnetworkmenu__text {
+  display: none;
+}
+.socialnetworks__container .socialnetwork__block .socialnetworkmenu__li img {
+  width: 25px;
+  height: 25px;
 }
 
 @media screen and (min-width: 744px) {
@@ -30,5 +40,50 @@
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1;
+  }
+  .socialnetworks__container .socialnetworkmenu__text {
+    display: inline-block !important;
+    color: white;
+    text-transform: uppercase;
+    padding-left: 15px;
+    font-weight: 400;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .socialnetworks__container {
+    width: 20%;
+    margin-left: 50px;
+  }
+  .socialnetwork__title {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 15px;
+  }
+  .socialnetwork__title > p {
+    font-weight: 400;
+  }
+  .socialnetwork__block .socialnetworkmenu__follow {
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    margin: 10px;
+  }
+  .socialnetworkmenu__li {
+    margin-bottom: 20px;
   }
 }/*# sourceMappingURL=social-networks.css.map */
