--- a/components/footer/social-networks/social-networks.scss
+++ b/components/footer/social-networks/social-networks.scss
@@ -1,7 +1,6 @@
 .socialnetworks__container {
     order: 0;
 
-
     .socialnetwork__block {
         display: flex;
         flex-direction: column;
@@ -13,6 +12,17 @@
         .socialnetworkmenu__follow {
             display: flex;
             flex-direction: row;
+            justify-content: space-around;
+            margin: 10px;
+        }
+
+        .socialnetworkmenu__text {
+            display: none;
+        }
+
+        .socialnetworkmenu__li img {
+            width: 25px;
+            height: 25px;
         }
     }
 }
@@ -22,15 +32,51 @@
     .socialnetworks__container {
         order: 1;
 
-
+        .socialnetworkmenu__text {
+            display: inline-block !important;
+            color: white;
+            text-transform: uppercase;
+            padding-left: 15px;
+            font-weight: 400;
+        }
 
     }
 
-    
+
 }
 
-@media screen and (min-width:1280px) {
- 
+@media screen and (min-width : 1280px) {
 
+    .socialnetworks__container {
+        width: 20%;
+        margin-left: 50px;
+    }
+
+    .socialnetwork__title {
+        display: flex !important;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        margin: 15px;
+
+
+        &>p {
+            font-weight: 400;
+        }
+
+    }
+
+    .socialnetwork__block {
+
+        .socialnetworkmenu__follow {       
+            flex-direction: column !important;
+            align-items: flex-start;
+            margin: 10px;            
+        }
+    }
+
+    .socialnetworkmenu__li {
+        margin-bottom: 20px
+    }
 
 }
