--- a/assets/style/css/index.css
+++ b/assets/style/css/index.css
@@ -345,6 +345,16 @@ p {
           flex-direction: column;
 }
 
+@media screen and (min-width: 1280px) {
+  .footer__container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
 .footer__container--gamegogsmenu {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -452,6 +462,11 @@ p {
     display: none;
   }
 }
+@media screen and (min-width: 1280px) {
+  .footer__container--gamegogsmenu {
+    width: 75%;
+  }
+}
 .socialnetworks__container {
   -webkit-box-ordinal-group: 1;
       -ms-flex-order: 0;
@@ -477,6 +492,16 @@ p {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin: 10px;
+}
+.socialnetworks__container .socialnetwork__block .socialnetworkmenu__text {
+  display: none;
+}
+.socialnetworks__container .socialnetwork__block .socialnetworkmenu__li img {
+  width: 25px;
+  height: 25px;
 }
 
 @media screen and (min-width: 744px) {
@@ -484,5 +509,50 @@ p {
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1;
+  }
+  .socialnetworks__container .socialnetworkmenu__text {
+    display: inline-block !important;
+    color: white;
+    text-transform: uppercase;
+    padding-left: 15px;
+    font-weight: 400;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .socialnetworks__container {
+    width: 20%;
+    margin-left: 50px;
+  }
+  .socialnetwork__title {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 15px;
+  }
+  .socialnetwork__title > p {
+    font-weight: 400;
+  }
+  .socialnetwork__block .socialnetworkmenu__follow {
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    margin: 10px;
+  }
+  .socialnetworkmenu__li {
+    margin-bottom: 20px;
   }
 }/*# sourceMappingURL=index.css.map */
