--- a/components/footer/about/about.scss
+++ b/components/footer/about/about.scss
@@ -83,3 +83,9 @@
         }
     }
 }
+
+@media screen and (min-width : 1280px) {
+    .footer__container--gamegogsmenu {
+        width: 75%;
+    }
+}
