--- a/components/footer/footer.scss
+++ b/components/footer/footer.scss
@@ -3,3 +3,11 @@
     flex-direction: column;
     
 }
+
+@media screen and (min-width : 1280px) {
+    
+    .footer__container {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+}
