--- a/assets/style/scss/index.scss
+++ b/assets/style/scss/index.scss
@@ -9,4 +9,5 @@
 @import '../../../components/footer/footer.scss';
 @import '../../../components/footer/about/about.scss';
 @import '../../../components/footer/social-networks/social-networks.scss';
+@import '../../../components/footer/rgpd/rgpd.scss';
  
