--- a/components/footer/about/about.scss
+++ b/components/footer/about/about.scss
@@ -2,10 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 40px;
 
     .gamegogs__block {
         display: flex;
         flex-direction: column;
+        width : 100%;
     }
 
 
@@ -28,8 +30,12 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        margin: 15px;
+        margin: 10px;
 
+        img {
+            width: 20px;
+            height: 20px;
+        }
 
         &>p {
             font-weight: 400;
