fixing some css footer

--- a/assets/style/scss/index.scss
+++ b/assets/style/scss/index.scss
@@ -3,11 +3,12 @@
 @import './variables.scss';
 @import './global.scss';
 
-// import des styles d'éléments principaux
+// import des styles d'éléments principaux header et footer
 @import '../../../components/header/header.scss';
 @import '../../../components/header/nagivation/navigation.scss';
 @import '../../../components/footer/footer.scss';
 @import '../../../components/footer/about/about.scss';
 @import '../../../components/footer/social-networks/social-networks.scss';
 @import '../../../components/footer/rgpd/rgpd.scss';
+@import '../../../components/footer/logo/logo.scss';
  
