--- a/assets/style/css/index.css
+++ b/assets/style/css/index.css
@@ -543,12 +543,12 @@ p {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    margin: 15px;
+    margin: 10px;
   }
   .socialnetwork__title > p {
     font-weight: 400;
   }
-  .socialnetwork__block .socialnetworkmenu__follow {
+  .socialnetworkmenu__follow {
     -webkit-box-orient: vertical !important;
     -webkit-box-direction: normal !important;
         -ms-flex-direction: column !important;
@@ -624,5 +624,41 @@ p {
   }
   .rgpd__container .rgpd__block .rgpdmenu__rgpd .rgpdmenu__li .rgpdmenu__text a:hover {
     text-decoration: underline;
+  }
+}
+.footer__container--brandname {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  -webkit-box-ordinal-group: 5;
+      -ms-flex-order: 4;
+          order: 4;
+}
+.footer__container--brandname .brandname__copyright p {
+  font-size: 12px;
+  padding: 12px;
+}
+
+@media screen and (min-width: 744px) {
+  .footer__container--brandname {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .footer__container--brandname {
+    width: 30%;
   }
 }/*# sourceMappingURL=index.css.map */
