--- a/assets/style/css/social-networks.css
+++ b/assets/style/css/social-networks.css
@@ -68,12 +68,12 @@
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    margin: 15px;
+    margin: 10px;
   }
   .socialnetwork__title > p {
     font-weight: 400;
   }
-  .socialnetwork__block .socialnetworkmenu__follow {
+  .socialnetworkmenu__follow {
     -webkit-box-orient: vertical !important;
     -webkit-box-direction: normal !important;
         -ms-flex-direction: column !important;
